Correct nav responsiveness bug on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -940,7 +940,7 @@ footer{
       &.visible{
         transition: transform 300ms ease-in-out;
         transform: scaleY(1);
-
+        width: 100vw;
         display: flex;
         flex-direction: column;
         position: absolute;
@@ -950,8 +950,6 @@ footer{
         border-top: 1px solid $dark_grey;
 
         a,.icons{
-          box-sizing: border-box;
-          width: 100%;
           padding: 1.5vh 0;
           margin: 0;
           display: flex;
@@ -960,7 +958,8 @@ footer{
         }
 
         &>a{
-          width: 100vw;
+          width: 100%;
+          box-sizing: border-box;
           &:hover{
             background-color: $medium_grey;
           }
@@ -975,10 +974,10 @@ footer{
         }
         .icons{
           a{
+            box-sizing: content-box;
             height: 2.2vh;
-            width: auto;
+            width: 2.2vh;
             padding: 0 15px;
-            mar
             img{
 
             }
